# aws-strands-agents-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  README.md  api_server.py  debug_cache.py  pyproject.toml  pytest.ini
.github/: PROJECT_STRUCTURE  STRANDS_AGENT_USAGE.md  copilot-instructions.md
chatbots/: REACT_CHATBOT_BUILD_SCRIPT.md  README.md  build.sh  cache_test.html  interactive_chat.py  start_ui.sh
config/: common_questions.json  diagnostic_web_search.py
data/: answers.json  responses.json  responses_with_sources.json
dev_tools/: AGENT_OVERVIEW.md  DOCUMENTATION.md  README.md  __init__.py  demo.py  strands_core_agent.py  test_aws_docs_query.py
docker/: .dockerignore  Dockerfile  Dockerfile.react  README.md  daemon.json  docker-compose.yml  nginx.conf  optimize.sh
docs/: AGENTCORE_CACHING_STRATEGY.md  API_PORT_STRATEGY.md  API_SERVER.md  ARCHITECTURE.md  AWS_ARCHITECTURE.md  CACHING_STRATEGY.md  CACHING_STRATEGY_IMPROVEMENTS.md  CHATBOT_GUI_FEATURES.md  COLLECTION_CONFIG.md  CONVERSATION_HISTORY_AGENTCORE.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  DEVELOPMENT_CHECKLIST.md  ERROR_HANDLING.md  GETTING_STARTED.md  GITHUB_ACTIONS_SETUP.md  HALLUCINATION_PREVENTION_TODO.md  IMPLEMENTATION_ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  INDEX.md  INFRASTRUCTURE_IMPLEMENTATION_STATUS.md  INFRASTRUCTURE_STATUS_SUMMARY.md  INPUT_VALIDATION_GUIDE.md  INTEGRATION_SUMMARY.md  LLM_CLASSIFICATION.md  LOCAL_STRANDS_INTEGRATION_COMPLETE.md  MODEL_PERFORMANCE_COMPARISON.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_GAPS.md  PROJECT_SUMMARY.md  (+11 more)
(+194 files in other folders)
